<resources>
    <string name="app_name">Calculatorr</string>
    <string name="one">1</string>
    <string name="Two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="div">/</string>
    <string name="mul">X</string>
    <string name="mod">%</string>
    <string name="clear">C</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="back"> &lt;X</string>
    <string name="eql">=</string>
    <string name="rot">[ ]</string>

</resources>