<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="410sp"
        android:layout_height="380sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="443dp"
        android:columnCount="4"
        android:rowCount="5"

        >

        <Button
            android:id="@+id/btnclear"
            android:layout_width="95sp"
            android:layout_height="85sp"
            android:text="@string/clear"
            android:textSize="50sp"
            android:layout_margin="2sp"
          />

        <Button
            android:id="@+id/btnback"
            android:layout_width="95sp"
            android:layout_height="85sp"
            android:text="@string/back"
            android:textSize="40sp"
            android:layout_margin="2sp"/>

        <Button
            android:id="@+id/btnmod"
            android:layout_width="95sp"
            android:layout_height="85sp"
            android:text="@string/mod"
            android:textSize="50sp"
            android:layout_margin="2sp"
           />

        <Button
            android:id="@+id/btndiv"
            android:layout_width="95sp"
            android:layout_height="85sp"
            android:text="@string/div"
            android:textSize="50sp"
            android:layout_margin="2sp"
      />

        <Button
            android:id="@+id/btnseven"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/seven"
            android:textSize="50sp"
            android:layout_margin="2sp"
          />

        <Button
            android:id="@+id/btneight"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/eight"
            android:textSize="50sp"
            android:layout_margin="2sp"
         />

        <Button
            android:id="@+id/btnnine"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/nine"
            android:textSize="50sp"
            android:layout_margin="2sp"/>

        <Button
            android:id="@+id/btnmul"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/mul"
            android:textSize="50sp"
            android:layout_margin="2sp"/>

        <Button
            android:id="@+id/btnfour"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/four"
            android:textSize="50sp"
            android:layout_margin="2sp"/>

        <Button
            android:id="@+id/btnfive"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/five"
            android:textSize="50sp"
            android:layout_margin="2sp"
            />

        <Button
            android:id="@+id/btnsix"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/six"
            android:textSize="50sp"
            android:layout_margin="2sp"
            />

        <Button
            android:id="@+id/btnsub"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/sub"
            android:textSize="50sp"
            android:layout_margin="2sp"
            />

        <Button
            android:id="@+id/btnone"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/one"
            android:textSize="50sp"
            android:layout_margin="2sp"
            />

        <Button
            android:id="@+id/btntwo"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/Two"
            android:textSize="50sp"
            android:layout_margin="2sp"
            />

        <Button
            android:id="@+id/btnthree"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/three"
            android:textSize="50sp"
            android:layout_margin="2sp"
            />

        <Button
            android:id="@+id/btnplus"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/plus"
            android:textSize="50sp"
            android:layout_margin="2sp"/>

        <Button
            android:id="@+id/btnrot"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/rot"
            android:textSize="50sp"
            android:layout_margin="2sp"
            />

        <Button
            android:id="@+id/btnzero"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/zero"
            android:textSize="50sp"
            android:layout_margin="2sp"
            />

        <Button
            android:id="@+id/btndot"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/dot"
            android:textSize="50sp"
            android:layout_margin="2sp"
            />

        <Button
            android:id="@+id/btneql"
            android:layout_width="95sp"
            android:layout_height="82sp"
            android:text="@string/eql"
            android:textSize="50sp"
            android:layout_margin="2sp"
            />

    </GridLayout>

</LinearLayout>